# news-ebook

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py  test_requirements.txt  tox.ini  zappa_settings.json
.github/workflows/: main.yml
news_ebook/: article.py  economist_kindle.py
old/: .gitignore  README.md  economist_kindle.py  issue.py  requirements.txt  section.py
old/tests/: test_main.py
src/news_ebook/app/: handlers.py  http.py  service_context.py
src/news_ebook/clients/: ses.py
src/news_ebook/lib/: ebook.py  economist.py  soup.py
src/news_ebook/lib/news_source/: __init__.py  economist.py
src/news_ebook/lib/output/: __init__.py  ebook.py  html.py
src/news_ebook/lib/output/templates/: basic.html  foo.html
tests/app/: test_handlers.py
